class NotificationGateway {
  async sendNotification() {
    throw new Error("Method not implemented");
  }
}

module.exports = NotificationGateway;
