class TemperatureGateway {
  async getCurrentTemperature() {
    throw new Error("Method not implemented");
  }
}

module.exports = TemperatureGateway;
